bai tập cuoi module

--- a/final/index.html
+++ b/final/index.html
@@ -115,7 +115,7 @@
                 <h5>Space Walking</h5>
                 <div class="artist-card">
                     <div>
-                        <img src="./img-hero-selection/hero-avatar.png" alt="avatar" />
+                        <img src="img/img-hero-selection/hero-avatar.png" alt="avatar" />
                     </div>
                     <span>Animakid</span>
                 </div>
@@ -148,7 +148,7 @@
             <div class="trending-card-text">
                 <h5>DSGN Animals</h5>
                 <div class="trending-artist-text">
-                    <img src="./trending-img/trending-pl1.png" alt="avatar" />
+                    <img src="img/trending-img/trending-pl1.png" alt="avatar" />
                     <p>MrFox</p>
                 </div>
             </div>
@@ -167,7 +167,7 @@
             <div class="trending-card-text">
                 <h5>DSGN Animals</h5>
                 <div class="trending-artist-text">
-                    <img src="./trending-img/trending-pl2.png" alt="avatar" />
+                    <img src="img/trending-img/trending-pl2.png" alt="avatar" />
                     <p>MrFox</p>
                 </div>
             </div>
@@ -187,7 +187,7 @@
             <div class="trending-card-text">
                 <h5>DSGN Animals</h5>
                 <div class="trending-artist-text">
-                    <img src="./trending-img/trending-pl3.png" alt="avatar" />
+                    <img src="img/trending-img/trending-pl3.png" alt="avatar" />
                     <p>MrFox</p>
                 </div>
             </div>
@@ -216,7 +216,7 @@
         <div class="artist-card-row">
             <div class="artist-card-element">
                 <div class="artist-card-avatar">
-                    <img src="img-top-rate/toprate1.png" alt="avatar" />
+                    <img src="img/img-top-rate/toprate1.png" alt="avatar" />
                 </div>
                 <div class="artist-card-info">
                     <h5 class="font-size-h5">Keepitreal</h5>
@@ -231,7 +231,7 @@
             </div>
             <div class="artist-card-element">
                 <div class="artist-card-avatar">
-                    <img src="img-top-rate/toprate2.png" alt="avatar" />
+                    <img src="img/img-top-rate/toprate2.png" alt="avatar" />
                 </div>
                 <div class="artist-card-info">
                     <h5 class="font-size-h5">DigiLab</h5>
@@ -246,7 +246,7 @@
             </div>
             <div class="artist-card-element">
                 <div class="artist-card-avatar">
-                    <img src="./img-top-rate/toprate3.png" alt="avatar" />
+                    <img src="img/img-top-rate/toprate3.png" alt="avatar" />
                 </div>
                 <div class="artist-card-info">
                     <h5 class="font-size-h5">GravityOne</h5>
@@ -261,7 +261,7 @@
             </div>
             <div class="artist-card-element">
                 <div class="artist-card-avatar">
-                    <img src="./img-top-rate/toprate4.png" alt="avatar" />
+                    <img src="img/img-top-rate/toprate4.png" alt="avatar" />
                 </div>
                 <div class="artist-card-info">
                     <h5 class="font-size-h5">Juanie</h5>
@@ -279,7 +279,7 @@
         <div class="artist-card-row">
             <div class="artist-card-element">
                 <div class="artist-card-avatar">
-                    <img src="img-top-rate/toprate5.png" alt="avatar" />
+                    <img src="img/img-top-rate/toprate5.png" alt="avatar" />
                 </div>
                 <div class="artist-card-info">
                     <h5 class="font-size-h5">BlueWhale</h5>
@@ -294,7 +294,7 @@
             </div>
             <div class="artist-card-element">
                 <div class="artist-card-avatar">
-                    <img src="img-top-rate/toprate6.png" alt="avatar" />
+                    <img src="img/img-top-rate/toprate6.png" alt="avatar" />
                 </div>
                 <div class="artist-card-info">
                     <h5 class="font-size-h5">MrFox</h5>
@@ -309,7 +309,7 @@
             </div>
             <div class="artist-card-element">
                 <div class="artist-card-avatar">
-                    <img src="./img-top-rate/toprate7.png" alt="avatar" />
+                    <img src="img/img-top-rate/toprate7.png" alt="avatar" />
                 </div>
                 <div class="artist-card-info">
                     <h5 class="font-size-h5">Shroomie</h5>
@@ -324,7 +324,7 @@
             </div>
             <div class="artist-card-element">
                 <div class="artist-card-avatar">
-                    <img src="./img-top-rate/toprate8.png" alt="avatar" />
+                    <img src="img/img-top-rate/toprate8.png" alt="avatar" />
                 </div>
                 <div class="artist-card-info">
                     <h5 class="font-size-h5">Robotica</h5>
@@ -342,7 +342,7 @@
         <div class="artist-card-row">
             <div class="artist-card-element">
                 <div class="artist-card-avatar">
-                    <img src="img-top-rate/toprate9.png" alt="avatar" />
+                    <img src="img/img-top-rate/toprate9.png" alt="avatar" />
                 </div>
                 <div class="artist-card-info">
                     <h5 class="font-size-h5">RustyRobot</h5>
@@ -357,7 +357,7 @@
             </div>
             <div class="artist-card-element">
                 <div class="artist-card-avatar">
-                    <img src="img-top-rate/toprate10.png" alt="avatar" />
+                    <img src="img/img-top-rate/toprate10.png" alt="avatar" />
                 </div>
                 <div class="artist-card-info">
                     <h5 class="font-size-h5">Animakid</h5>
@@ -372,7 +372,7 @@
             </div>
             <div class="artist-card-element">
                 <div class="artist-card-avatar">
-                    <img src="./img-top-rate/toprate11.png" alt="avatar" />
+                    <img src="img/img-top-rate/toprate11.png" alt="avatar" />
                 </div>
                 <div class="artist-card-info">
                     <h5 class="font-size-h5">Dotgu</h5>
@@ -387,7 +387,7 @@
             </div>
             <div class="artist-card-element">
                 <div class="artist-card-avatar">
-                    <img src="./img-top-rate/toprate12.png" alt="avatar" />
+                    <img src="img/img-top-rate/toprate12.png" alt="avatar" />
                 </div>
                 <div class="artist-card-info">
                     <h5 class="font-size-h5">Ghiblier</h5>
@@ -533,7 +533,7 @@
                 <div class="artist-info font-size-h5">
                     <h5>NFT Name</h5>
                     <div class="artist-info-content font-size-16">
-                        <img src="img-ntf/avatar-ntf.png" alt="">
+                        <img src="img/img-ntf/avatar-ntf.png" alt="">
                         <span>NFT Artist</span>
                     </div>
                 </div>
@@ -555,7 +555,7 @@
                 <div class="artist-info font-size-h5">
                     <h5>NFT Name</h5>
                     <div class="artist-info-content font-size-16">
-                        <img src="img-ntf/avatar-ntf.png" alt="">
+                        <img src="img/img-ntf/avatar-ntf.png" alt="">
                         <span>NFT Artist</span>
                     </div>
                 </div>
@@ -577,7 +577,7 @@
                 <div class="artist-info font-size-h5">
                     <h5>NFT Name</h5>
                     <div class="artist-info-content font-size-16">
-                        <img src="img-ntf/avatar-ntf.png" alt="">
+                        <img src="img/img-ntf/avatar-ntf.png" alt="">
                         <span>NFT Artist</span>
                     </div>
                 </div>
@@ -642,21 +642,21 @@
     </div>
     <div class="how-it-works-row">
         <div class="how-it-works-card">
-            <img src="img-how-it-works/Icon1.png" alt="">
+            <img src="img/img-how-it-works/Icon1.png" alt="">
             <div class="card-details">
                 <h5 class="font-size-h5">Setup Your wallet</h5>
                 <p class="font-size-16">Set up your wallet of choice. Connect it to the Animarket by clicking the wallet icon in the top right corner.</p>
             </div>
         </div>
         <div class="how-it-works-card">
-            <img src="img-how-it-works/Icon1.png" alt="">
+            <img src="img/img-how-it-works/Icon1.png" alt="">
             <div class="card-details">
                 <h5 class="font-size-h5">Create Collection</h5>
                 <p class="font-size-16">Upload your work and setup your collection. Add a description, social links and floor price.</p>
             </div>
         </div>
         <div class="how-it-works-card">
-            <img src="img-how-it-works/Icon1.png" alt="">
+            <img src="img/img-how-it-works/Icon1.png" alt="">
             <div class="card-details">
                 <h5 class="font-size-h5">Start Earning</h5>
                 <p class="font-size-16">Choose between auctions and fixed-price listings. Start earning by selling your NFTs or trading others.</p>
