bai tập ve nha buoi 15

--- a/final/index.html
+++ b/final/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta
-            name="viewport"
-            content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Bài tập Final</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -31,6 +28,7 @@
     <link rel="stylesheet" href="css/how-it-works.css">
     <link rel="stylesheet" href="css/sub-widget.css">
     <link rel="stylesheet" href="css/footer.css">
+
 </head>
 <body>
 <!--nav menu-->
@@ -42,36 +40,27 @@
                 width="32"
                 height="32"
         />
-        <img src="iconsvg/logo.svg" alt="Website Logo" />
+        <img class="name-logo" src="iconsvg/logo.svg" alt="Website Logo" />
     </div>
     <div class="nav-menu">
         <ul class="nav-list">
             <li>
-                <button
-                        class="primary-background-color primary-color secondary-font-size"
-                >
-                    Marketplace
-                </button>
+                <a href="#hero-section">Marketplace</a>
             </li>
             <li>
-                <button
-                        class="primary-background-color primary-color secondary-font-size"
-                >
-                    Rankings
-                </button>
+                <a href="#ranking">Rankings</a>
             </li>
             <li>
-                <button
-                        class="primary-background-color primary-color secondary-font-size"
-                >
-                    Connect a wallet
+                <a href="#connect-wallet">Connect a wallet</a>
+            </li>
+            <li>
+                <button class="button-sign-up secondary-button secondary-font-size">
+                    <img class="size-person" src="iconsvg/person.svg" alt="">
+                    Sign Up
                 </button>
             </li>
         </ul>
-        <button class="button-sign-up secondary-button secondary-font-size">
-            <img class="size-person" src="iconsvg/person.svg" alt="">
-            Sign Up
-        </button>
+
         <div class="icon-nav-menu">
             <img class="icon-nav" src="iconsvg/icon-nav.svg" alt="" />
         </div>
@@ -110,7 +99,8 @@
             </div>
         </div>
         <div class="hero-image">
-            <div class="hero-image-placeholder"></div>
+            <div class="hero-image-placeholder">
+            </div>
             <div class="hero-section-frame">
                 <h5>Space Walking</h5>
                 <div class="artist-card">
@@ -124,10 +114,10 @@
     </div>
 </div>
 <!--Trending Collection-->
-<div class="trending-section">
+<div class="trending-section" id="hero-section">
     <div class="trending-headline">
-        <div class="headline-heading font-size-h3">
-            <h3>Trending Collection</h3>
+        <div class="headline-heading font-size-h2">
+            <h2>Trending Collection</h2>
         </div>
         <div class="headline-subhead">
             <p>Checkout our weekly updated trending collection.</p>
@@ -195,10 +185,10 @@
     </div>
 </div>
 <!--Top Creator-->
-<div class="top-rate">
+<div class="top-rate" id="ranking">
     <div class="top-rate-section">
         <div class="top-rate-head">
-            <h3>Top creators</h3>
+            <h2 class="font-size-h2">Top creators</h2>
             <div class="top-rate-subhead">
                 <p>Checkout Top Rated Creators on the NFT Marketplace</p>
             </div>
@@ -226,7 +216,7 @@
                     </div>
                 </div>
                 <div class="ranking">
-                    <p class="font-size-Space-Mono">1</p>
+                    <a class="font-size-Space-Mono" href="/$">1</a>
                 </div>
             </div>
             <div class="artist-card-element">
@@ -241,7 +231,7 @@
                     </div>
                 </div>
                 <div class="ranking">
-                    <p class="font-size-Space-Mono">1</p>
+                    <a class="font-size-Space-Mono" href="/$">2</a>
                 </div>
             </div>
             <div class="artist-card-element">
@@ -256,7 +246,7 @@
                     </div>
                 </div>
                 <div class="ranking">
-                    <p class="font-size-Space-Mono">1</p>
+                    <a class="font-size-Space-Mono" href="/$">3</a>
                 </div>
             </div>
             <div class="artist-card-element">
@@ -271,7 +261,7 @@
                     </div>
                 </div>
                 <div class="ranking">
-                    <p class="font-size-Space-Mono">1</p>
+                    <a class="font-size-Space-Mono" href="/$">4</a>
                 </div>
             </div>
         </div>
@@ -289,7 +279,7 @@
                     </div>
                 </div>
                 <div class="ranking">
-                    <p class="font-size-Space-Mono">1</p>
+                    <a class="font-size-Space-Mono" href="/$">5</a>
                 </div>
             </div>
             <div class="artist-card-element">
@@ -304,7 +294,7 @@
                     </div>
                 </div>
                 <div class="ranking">
-                    <p class="font-size-Space-Mono">1</p>
+                    <a class="font-size-Space-Mono" href="/$">6</a>
                 </div>
             </div>
             <div class="artist-card-element">
@@ -319,7 +309,7 @@
                     </div>
                 </div>
                 <div class="ranking">
-                    <p class="font-size-Space-Mono">1</p>
+                    <a class="font-size-Space-Mono" href="/$">7</a>
                 </div>
             </div>
             <div class="artist-card-element">
@@ -334,7 +324,7 @@
                     </div>
                 </div>
                 <div class="ranking">
-                    <p class="font-size-Space-Mono">1</p>
+                    <a class="font-size-Space-Mono" href="/$">8</a>
                 </div>
             </div>
         </div>
@@ -352,7 +342,7 @@
                     </div>
                 </div>
                 <div class="ranking">
-                    <p class="font-size-Space-Mono">1</p>
+                    <a class="font-size-Space-Mono" href="/$">9</a>
                 </div>
             </div>
             <div class="artist-card-element">
@@ -367,7 +357,7 @@
                     </div>
                 </div>
                 <div class="ranking">
-                    <p class="font-size-Space-Mono">1</p>
+                    <a class="font-size-Space-Mono" href="/$">10</a>
                 </div>
             </div>
             <div class="artist-card-element">
@@ -382,7 +372,7 @@
                     </div>
                 </div>
                 <div class="ranking">
-                    <p class="font-size-Space-Mono">1</p>
+                    <a class="font-size-Space-Mono" href="/$">11</a>
                 </div>
             </div>
             <div class="artist-card-element">
@@ -397,7 +387,7 @@
                     </div>
                 </div>
                 <div class="ranking">
-                    <p class="font-size-Space-Mono">1</p>
+                    <a class="font-size-Space-Mono" href="/$">12</a>
                 </div>
             </div>
         </div>
@@ -407,7 +397,7 @@
 <!--Browse Categories-->
 <div class="browse-categories">
     <div class="browse-headline">
-        <h3 class="font-size-h3">Browse Categories</h3>
+        <h2 class="font-size-h2">Browse Categories</h2>
     </div>
     <div class="category-list">
 <!--        row 1-->
@@ -518,10 +508,10 @@
 <div class="discover">
     <div class="discover-headline">
         <div class="headline-text">
-            <h3 class="font-size-h3">Discover More NFTs</h3>
+            <h2 class="font-size-h2">Discover More NFTs</h2>
             <p class="font-size-22">Explore new trending NFTs</p>
         </div>
-        <button class="secondary-button-outline font-size-h3 font-size-16">
+        <button class="secondary-button-outline font-size-h2 font-size-16">
             <img src="iconsvg/seeall.svg" alt="">
             <span class="secondary-font-size">See All</span>
         </button>
@@ -605,7 +595,7 @@
                     <div class="avatar-frame-card"></div>
                     <span class="font-size-16">Shroomie</span>
                 </div>
-                <h2 class="font-h2">Magic Mashrooms</h2>
+                <h2 class="font-size-h2">Magic Mashrooms</h2>
                 <button>
                     <img src="iconsvg/seeall.svg" alt="">
                     <span>See All</span>
@@ -635,9 +625,9 @@
 </div>
 
 <!--How it works-->
-<div class="how-it-works">
+<div class="how-it-works" id = "connect-wallet">
     <div class="how-it-works-headline">
-        <h3 class="font-size-h3 ">How it works</h3>
+        <h2 class="font-size-h2 ">How it works</h2>
         <p class="font-size-22">Find out how to get started</p>
     </div>
     <div class="how-it-works-row">
@@ -664,12 +654,13 @@
         </div>
     </div>
 </div>
+<!--widget-->
 <div class="sub-widget">
     <div class="sub-widget-form">
         <div class="background-sub-widget"></div>
         <div class="sub-widget-heading">
             <div class="sub-widget-heading-text">
-                <h3 class="font-size-h3">Join our weekly digest</h3>
+                <h2 class="font-size-h2">Join our weekly digest</h2>
                 <p class="font-size-22">Get exclusive promotions & updates straight to your inbox.</p>
             </div>
             <form class="form-subscribe" action="" method="post">
@@ -695,19 +686,27 @@
                 <p class="font-size-16-footer">NFT marketplace UI created with Anima for Figma.</p>
                 <p class="font-size-16-footer"  >Join our community</p>
                 <div class="footer-left-social">
-                    <img src="iconsvg/footer-icon1.svg" alt="">
-                    <img src="iconsvg/footer-icon2.svg" alt="">
-                    <img src="iconsvg/footer-icon3.svg" alt="">
-                    <img src="iconsvg/footer-icon4.svg" alt="">
+                    <a href="?">
+                        <img src="iconsvg/footer-icon1.svg" alt="">
+                    </a>
+                    <a href="?">
+                        <img src="iconsvg/footer-icon2.svg" alt="">
+                    </a>
+                    <a href="">
+                        <img src="iconsvg/footer-icon3.svg" alt="">
+                    </a>
+                    <a href="?">
+                        <img src="iconsvg/footer-icon4.svg" alt="">
+                    </a>
                 </div>
             </div>
         </div>
         <div class="footer-center">
             <h5 class="font-size-h5-footer">Explore</h5>
             <div class="pages-footer">
-                <p class="font-size-16-footer">Marketplace</p>
-                <p class="font-size-16-footer">Rankings</p>
-                <p class="font-size-16-footer">Connect a wallet</p>
+                <a class="font-size-16-footer" href="#hero-section">Marketplace</a>
+                <a class="font-size-16-footer" href="#ranking">Rankings</a>
+                <a class="font-size-16-footer" href="#connect-wallet">Connect a wallet</a>
             </div>
         </div>
         <div class="footer-right">
