bai tập ve nha buoi 15

--- a/final/index.html
+++ b/final/index.html
@@ -406,7 +406,7 @@
                 <div class="category-item">
                     <div class="category-placeholder">
                         <div class="category-icon">
-                        <img src="iconsvg/category1.svg" alt="">
+                        <img src="./iconsvg/category1.svg" alt="">
                     </div>
                     </div>
                 </div>
@@ -418,7 +418,7 @@
                 <div class="category-item">
                     <div class="category-placeholder category-background-2">
                         <div class="category-icon">
-                            <img src="iconsvg/category2.svg" alt="">
+                            <img src="./iconsvg/category2.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -430,7 +430,7 @@
                 <div class="category-item">
                     <div class="category-placeholder category-background-3">
                         <div class="category-icon">
-                            <img src="iconsvg/category3.svg" alt="">
+                            <img src="./iconsvg/category3.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -442,7 +442,7 @@
                 <div class="category-item">
                     <div class="category-placeholder category-background-4">
                         <div class="category-icon">
-                            <img src="iconsvg/category4.svg" alt="">
+                            <img src="./iconsvg/category4.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -457,7 +457,7 @@
                 <div class="category-item">
                     <div class="category-placeholder category-background-5">
                         <div class="category-icon">
-                            <img src="iconsvg/category1.svg" alt="">
+                            <img src="./iconsvg/category1.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -469,7 +469,7 @@
                 <div class="category-item">
                     <div class="category-placeholder category-background-6">
                         <div class="category-icon">
-                            <img src="iconsvg/category2.svg" alt="">
+                            <img src="./iconsvg/category2.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -481,7 +481,7 @@
                 <div class="category-item">
                     <div class="category-placeholder category-background-7">
                         <div class="category-icon">
-                            <img src="iconsvg/category3.svg" alt="">
+                            <img src="./iconsvg/category3.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -493,7 +493,7 @@
                 <div class="category-item">
                     <div class="category-placeholder category-background-8">
                         <div class="category-icon">
-                            <img src="iconsvg/category4.svg" alt="">
+                            <img src="./iconsvg/category4.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -512,7 +512,7 @@
             <p class="font-size-22">Explore new trending NFTs</p>
         </div>
         <button class="secondary-button-outline font-size-h2 font-size-16">
-            <img src="iconsvg/seeall.svg" alt="">
+            <img src="./iconsvg/seeall.svg" alt="">
             <span class="secondary-font-size">See All</span>
         </button>
     </div>
