bai tập ve nha buoi 15

--- a/final/index.html
+++ b/final/index.html
@@ -35,12 +35,12 @@
 <nav class="navbar">
     <div class="logo">
         <img
-                src="iconsvg/icon-logo.svg"
+                src="icon-svg/icon-logo.svg"
                 alt="icon-logo"
                 width="32"
                 height="32"
         />
-        <img class="name-logo" src="iconsvg/logo.svg" alt="Website Logo" />
+        <img class="name-logo" src="icon-svg/logo.svg" alt="Website Logo" />
     </div>
     <div class="nav-menu">
         <ul class="nav-list">
@@ -55,14 +55,14 @@
             </li>
             <li>
                 <button class="button-sign-up secondary-button secondary-font-size">
-                    <img class="size-person" src="iconsvg/person.svg" alt="">
+                    <img class="size-person" src="icon-svg/person.svg" alt="">
                     Sign Up
                 </button>
             </li>
         </ul>
 
         <div class="icon-nav-menu">
-            <img class="icon-nav" src="iconsvg/icon-nav.svg" alt="" />
+            <img class="icon-nav" src="icon-svg/icon-nav.svg" alt="" />
         </div>
     </div>
 </nav>
@@ -79,7 +79,7 @@
             </div>
             <div class="hero-button">
                 <button class="secondary-button secondary-font-size">
-                    <img src="iconsvg/rocket.svg" alt="" />
+                    <img src="icon-svg/rocket.svg" alt="" />
                     <span>Get Started</span>
                 </button>
             </div>
@@ -195,7 +195,7 @@
         </div>
         <button class="top-rate-button secondary-button-outline">
           <span>
-            <img src="./iconsvg/rocket2.svg" alt="" />
+            <img src="icon-svg/rocket2.svg" alt="" />
           </span>
             <span class="secondary-font-size">View Rankings</span>
         </button>
@@ -406,7 +406,7 @@
                 <div class="category-item">
                     <div class="category-placeholder">
                         <div class="category-icon">
-                        <img src="./iconsvg/category1.svg" alt="">
+                        <img src="icon-svg/category1.svg" alt="">
                     </div>
                     </div>
                 </div>
@@ -418,7 +418,7 @@
                 <div class="category-item">
                     <div class="category-placeholder category-background-2">
                         <div class="category-icon">
-                            <img src="./iconsvg/category2.svg" alt="">
+                            <img src="icon-svg/category2.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -430,7 +430,7 @@
                 <div class="category-item">
                     <div class="category-placeholder category-background-3">
                         <div class="category-icon">
-                            <img src="./iconsvg/category3.svg" alt="">
+                            <img src="icon-svg/category3.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -442,7 +442,7 @@
                 <div class="category-item">
                     <div class="category-placeholder category-background-4">
                         <div class="category-icon">
-                            <img src="./iconsvg/category4.svg" alt="">
+                            <img src="icon-svg/category4.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -457,7 +457,7 @@
                 <div class="category-item">
                     <div class="category-placeholder category-background-5">
                         <div class="category-icon">
-                            <img src="./iconsvg/category1.svg" alt="">
+                            <img src="icon-svg/category1.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -469,7 +469,7 @@
                 <div class="category-item">
                     <div class="category-placeholder category-background-6">
                         <div class="category-icon">
-                            <img src="./iconsvg/category2.svg" alt="">
+                            <img src="icon-svg/category2.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -481,7 +481,7 @@
                 <div class="category-item">
                     <div class="category-placeholder category-background-7">
                         <div class="category-icon">
-                            <img src="./iconsvg/category3.svg" alt="">
+                            <img src="icon-svg/category3.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -493,7 +493,7 @@
                 <div class="category-item">
                     <div class="category-placeholder category-background-8">
                         <div class="category-icon">
-                            <img src="./iconsvg/category4.svg" alt="">
+                            <img src="icon-svg/category4.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -512,7 +512,7 @@
             <p class="font-size-22">Explore new trending NFTs</p>
         </div>
         <button class="secondary-button-outline font-size-h2 font-size-16">
-            <img src="./iconsvg/seeall.svg" alt="">
+            <img src="icon-svg/seeall.svg" alt="">
             <span class="secondary-font-size">See All</span>
         </button>
     </div>
@@ -597,7 +597,7 @@
                 </div>
                 <h2 class="font-size-h2">Magic Mashrooms</h2>
                 <button>
-                    <img src="iconsvg/seeall.svg" alt="">
+                    <img src="icon-svg/seeall.svg" alt="">
                     <span>See All</span>
                 </button>
             </div>
@@ -666,7 +666,7 @@
             <form class="form-subscribe" action="" method="post">
                 <input name="email" type="email" placeholder="Enter your email here" />
                 <button class="secondary-button" type="submit">
-                    <img src="iconsvg/email.svg" alt="email" />
+                    <img src="icon-svg/email.svg" alt="email" />
                     <span class="secondary-font-size">Subscribe</span>
                 </button>
             </form>
@@ -679,24 +679,24 @@
     <div class="footer-container">
         <div class="footer-left">
             <div class="footer-logo">
-                <img src="iconsvg/icon-logo.svg" alt="">
-                <img src="iconsvg/logo.svg" alt="">
+                <img src="icon-svg/icon-logo.svg" alt="">
+                <img src="icon-svg/logo.svg" alt="">
             </div>
             <div class="footer-left-text">
                 <p class="font-size-16-footer">NFT marketplace UI created with Anima for Figma.</p>
                 <p class="font-size-16-footer"  >Join our community</p>
                 <div class="footer-left-social">
                     <a href="?">
-                        <img src="iconsvg/footer-icon1.svg" alt="">
+                        <img src="icon-svg/footer-icon1.svg" alt="">
                     </a>
                     <a href="?">
-                        <img src="iconsvg/footer-icon2.svg" alt="">
+                        <img src="icon-svg/footer-icon2.svg" alt="">
                     </a>
                     <a href="">
-                        <img src="iconsvg/footer-icon3.svg" alt="">
+                        <img src="icon-svg/footer-icon3.svg" alt="">
                     </a>
                     <a href="?">
-                        <img src="iconsvg/footer-icon4.svg" alt="">
+                        <img src="icon-svg/footer-icon4.svg" alt="">
                     </a>
                 </div>
             </div>
