--- a/final/index.html
+++ b/final/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title></title>
+    <title>NFT Marketplace</title>
+    <link rel="stylesheet" href="./icon-svg/icon-nav.svg" type="image/svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -406,8 +407,8 @@
                 <div class="category-item">
                     <div class="category-placeholder">
                         <div class="category-icon">
-                        <img src="icon-svg/category1.svg" alt="">
-                    </div>
+                            <img src="icon-svg/category1.svg" alt="">
+                        </div>
                     </div>
                 </div>
                 <div class="category-name font-size-h5">
