bai tap buoi 20

--- a/btvn-day20/bai3.html
+++ b/btvn-day20/bai3.html
@@ -20,9 +20,13 @@
 </body>
 
 <script>
-    document.getElementById("changeTextBtn").onclick = function() {
-
-    };
+    const button = document.getElementById("changeTextBtn");
+    const textE = document.getElementsByTagName("p");
+    button.addEventListener("click", () => {
+        for (let i = 0; i < textE.length; i++) {
+            textE[i].textContent = `Đã đổi nội dung ${i + 1}`;
+        }
+    })
 </script>
 
 </html>
